k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-service
spec:
  type: LoadBalancer
  selector:
    app: devsu-demo
  ports:
    - port: 80
      targetPort: 8000
